code/dotnet/IDLookup/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# ID Lookup client library for .NET

[![API Version](https://img.shields.io/badge/api-v2.0.0-blue)](https://developer.factset.com/api-catalog/id-lookup-api)
[![Nuget](https://img.shields.io/badge/nuget-v1.0.0-orange)](https://www.nuget.org/packages/FactSet.SDK.IDLookup/1.0.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

The ID Lookup API is a fuzzy search service that allows users to resolve symbols but are unable to find them elsewhere. The ID Lookup API allows users to search for entities in a wide variety of ways including, but not limited to, tickers, CUSIPs, URLs, a company’s brands, names and descriptions. The API does not require a complete query and will return different lists of results with each additional character, which enables users to iterate and adjust queries to return the desired results. Each search query returns a list of suggestions that can include every entity type offered by the API based on a matching and ranking algorithm.


The API response returns multiple different symbols that map to both internal FactSet identifiers like security or entity IDs as well as external identifiers like exchange tickers, Morningstar symbols and ISINs. This gives users flexibility in mapping identifiers across the FactSet universe.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.0.0
- SDK version: 1.0.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.IDLookup -v 1.0.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.IDLookup -Version 1.0.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.IDLookup.Api;
using FactSet.SDK.IDLookup.Client;
using FactSet.SDK.IDLookup.Model;

namespace Example
{
    public static class HelperExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.IDLookup.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new FactSetIDLookupApi(config);
            var dataset = "equities";  // string | Type of dataset.

            try
            {
                // Helper endpoint offering a list of supported fields and values to filter a requested dataset.
                HelperEndpoint result = apiInstance.Helper(dataset);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling FactSetIDLookupApi.Helper: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/idsearch/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*FactSetIDLookupApi* | [**Helper**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/FactSetIDLookupApi.md#helper) | **GET** /metadata/fields/list-by-dataset | Helper endpoint offering a list of supported fields and values to filter a requested dataset.
*FactSetIDLookupApi* | [**Search**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/FactSetIDLookupApi.md#search) | **POST** /lookup | Search functionality to return tickers, company names, and unique identifiers for FactSet data.


## Documentation for Models

 - [Model.ErrorExample](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/ErrorExample.md)
 - [Model.ErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/ErrorResponse.md)
 - [Model.FieldsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/FieldsObject.md)
 - [Model.FilterObjects](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/FilterObjects.md)
 - [Model.Filters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/Filters.md)
 - [Model.HelperEndpoint](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/HelperEndpoint.md)
 - [Model.HelperObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/HelperObject.md)
 - [Model.LookupObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/LookupObject.md)
 - [Model.LookupRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/LookupRequest.md)
 - [Model.LookupRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/LookupRequestMeta.md)
 - [Model.LookupResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/LookupResponse.md)
 - [Model.LookupResponseMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/LookupResponseMeta.md)
 - [Model.LookupResponseMetaResultCount](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/LookupResponseMetaResultCount.md)
 - [Model.ResponseDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/ResponseDetails.md)
 - [Model.ResponseDetailsUnderlying](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/ResponseDetailsUnderlying.md)
 - [Model.ValuesObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/IDLookup/v2/docs/ValuesObject.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
